# QA-Assistant

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
chromadb_function/: config.py  main.py
chromadb_function/backing_up/: backing_up.py  utilities.py
chromadb_function/embedding/: embedder.py
chromadb_function/fetching/: confluence_fetcher.py  html_processor.py
chromadb_function/updating/: chroma_updating.py
gce_instance_setup/: docker-compose.yml  setup.sh
model_function/: config.py  main.py
model_function/embedding/: embedder.py
model_function/prompting/: templates.py
model_function/retrieval/: retriever.py
model_function/utils/: formater.py  google_chat_client.py
