[project]
name = "qa-wiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asgiref==3.8.1",
    "asttokens==3.0.0",
    "async-lru==2.0.4",
    "atlassian-python-api==3.41.19",
    "attrs==25.2.0",
    "babel==2.17.0",
    "backoff==2.2.1",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.13.3",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "chroma-hnswlib==0.7.6",
    "chromadb==0.6.3",
    "click==8.1.8",
    "cloudevents==1.11.0",
    "coloredlogs==15.0.1",
    "comm==0.2.2",
    "cryptography==44.0.2",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "deprecated==1.2.18",
    "deprecation==2.1.0",
    "distro==1.9.0",
    "docstring-parser==0.16",
    "durationpy==0.9",
    "emoji==2.14.1",
    "eval-type-backport==0.2.2",
    "executing==2.2.0",
    "fastapi==0.115.11",
    "fastjsonschema==2.21.1",
    "filelock==3.17.0",
    "filetype==1.2.0",
    "flask==3.1.0",
    "flatbuffers==25.2.10",
    "fqdn==1.5.1",
    "fsspec==2025.3.0",
    "functions-framework==3.8.2",
    "google-api-core==2.24.2",
    "google-auth==2.38.0",
    "google-cloud-aiplatform==1.85.0",
    "google-cloud-bigquery==3.30.0",
    "google-cloud-core==2.4.3",
    "google-cloud-resource-manager==1.14.2",
    "google-cloud-storage==2.19.0",
    "google-crc32c==1.6.0",
    "google-genai==1.7.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.69.1",
    "greenlet==3.1.1",
    "grpc-google-iam-v1==0.14.2",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "html5lib==1.1",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.29.3",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "importlib-resources==6.5.2",
    "ipykernel==6.29.5",
    "ipython==9.0.2",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "json5==0.10.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.15.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.3.5",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "kubernetes==32.0.1",
    "langchain==0.3.20",
    "langchain-core==0.3.44",
    "langchain-text-splitters==0.3.6",
    "langdetect==1.0.9",
    "langsmith==0.3.13",
    "lxml==5.3.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.2",
    "mmh3==5.1.0",
    "monotonic==1.6",
    "mpmath==1.3.0",
    "mypy-extensions==1.0.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "notebook==7.3.2",
    "notebook-shim==0.2.4",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "oauthlib==3.2.2",
    "olefile==0.47",
    "onnxruntime==1.21.0",
    "opentelemetry-api==1.31.0",
    "opentelemetry-exporter-otlp-proto-common==1.31.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.31.0",
    "opentelemetry-instrumentation==0.52b0",
    "opentelemetry-instrumentation-asgi==0.52b0",
    "opentelemetry-instrumentation-fastapi==0.52b0",
    "opentelemetry-proto==1.31.0",
    "opentelemetry-sdk==1.31.0",
    "opentelemetry-semantic-conventions==0.52b0",
    "opentelemetry-util-http==0.52b0",
    "orjson==3.10.15",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "posthog==3.19.1",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.50",
    "proto-plus==1.26.1",
    "protobuf==5.29.3",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pypdf==5.3.1",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-iso639==2025.2.18",
    "python-json-logger==3.3.0",
    "python-magic==0.4.27",
    "python-oxmsg==0.0.2",
    "pyyaml==6.0.2",
    "pyzmq==26.3.0",
    "rapidfuzz==3.12.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==13.9.4",
    "rpds-py==0.23.1",
    "rsa==4.9",
    "ruff>=0.11.6",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "send2trash==1.8.3",
    "sentence-transformers==3.4.1",
    "setuptools==76.0.0",
    "shapely==2.0.7",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.39",
    "stack-data==0.6.3",
    "starlette==0.46.1",
    "sympy==1.13.1",
    "tenacity==9.0.0",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "tokenizers==0.21.1",
    "torch==2.6.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.49.0",
    "triton==3.2.0",
    "typer==0.15.2",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "unstructured==0.16.25",
    "unstructured-client==0.31.1",
    "uri-template==1.3.0",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "watchdog==6.0.0",
    "watchfiles==1.0.4",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "wrapt==1.17.2",
    "zipp==3.21.0",
    "zstandard==0.23.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]

fixable = ["ALL"]

[tool.ruff.lint.isort]
# Sort imports
known-first-party = ["qa_wiki"]
split-on-trailing-comma = true
combine-as-imports = true
